<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:color="@color/title_color"
        android:text="@string/pin_title"
        android:textSize="@dimen/title_size" />

    <EditText
        android:id="@+id/pin_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_hint"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:color="@color/title_color"
        android:text="@string/challenge_title"
        android:textSize="@dimen/title_size" />

    <EditText
        android:id="@+id/challenge_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/challenge_hint"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_text" />

</LinearLayout>
